tests/toylang/neg/001361_mutation.toylang
program a = { var a : bool; bool } .
